--- a/127. Word Ladder.ipynb
+++ b/127. Word Ladder.ipynb
@@ -18,24 +18,28 @@
     "\n",
     "class Solution:\n",
     "    def ladderLength(self, beginWord, endWord, wordList):\n",
-    "        if endWord not in wordList or not endWord or not beginWord or not wordList:\n",
+    "        if (endWord not in wordList) or (not endWord) or (not beginWord) or (not wordList):\n",
     "            return 0\n",
+    "            \n",
     "        L = len(beginWord)\n",
     "        all_combo_dict = defaultdict(list)\n",
     "        for word in wordList:\n",
     "            for i in range(L):\n",
     "                all_combo_dict[word[:i] + \"*\" + word[i+1:]].append(word)\n",
     "        print(f\"all_combo_dict = {all_combo_dict}\")\n",
+    "\n",
     "        queue = deque([(beginWord, 1)])\n",
     "        print(f\"queue = {queue}\")\n",
     "        visited = set()\n",
     "        visited.add(beginWord)\n",
     "        print(f\"visited = {visited}\")\n",
+    "\n",
     "        while queue:\n",
     "            print(f\"{'_'*200}\")\n",
     "            print(f\"init: queue = {queue}\")\n",
     "            current_word, level = queue.popleft()     \n",
     "            print(f\"current_word = {current_word}, level = {level}\")\n",
+    "            \n",
     "            for i in range(L):\n",
     "                print(f\"{'-'*100}\")\n",
     "                intermediate_word = current_word[:i] + \"*\" + current_word[i+1:]\n",
@@ -82,7 +86,7 @@
       "all_combo_dict[intermediate_word] = ['hot']\n",
       "-> (word = hot) not in (visited = {'hit'})\n",
       "init: visited = {'hit'}\n",
-      "end:  visited = {'hit', 'hot'}\n",
+      "end:  visited = {'hot', 'hit'}\n",
       "end:  queue = deque([('hot', 2)])\n",
       "----------------------------------------------------------------------------------------------------\n",
       "intermediate_word = hi*\n",
@@ -93,43 +97,43 @@
       "----------------------------------------------------------------------------------------------------\n",
       "intermediate_word = *ot\n",
       "all_combo_dict[intermediate_word] = ['hot', 'dot', 'lot']\n",
-      "-> (word = hot) in (visited = {'hit', 'hot'})\n",
-      "-> (word = dot) not in (visited = {'hit', 'hot'})\n",
-      "init: visited = {'hit', 'hot'}\n",
-      "end:  visited = {'hit', 'hot', 'dot'}\n",
+      "-> (word = hot) in (visited = {'hot', 'hit'})\n",
+      "-> (word = dot) not in (visited = {'hot', 'hit'})\n",
+      "init: visited = {'hot', 'hit'}\n",
+      "end:  visited = {'dot', 'hot', 'hit'}\n",
       "end:  queue = deque([('dot', 3)])\n",
-      "-> (word = lot) not in (visited = {'hit', 'hot', 'dot'})\n",
-      "init: visited = {'hit', 'hot', 'dot'}\n",
-      "end:  visited = {'hit', 'hot', 'lot', 'dot'}\n",
+      "-> (word = lot) not in (visited = {'dot', 'hot', 'hit'})\n",
+      "init: visited = {'dot', 'hot', 'hit'}\n",
+      "end:  visited = {'dot', 'hot', 'hit', 'lot'}\n",
       "end:  queue = deque([('dot', 3), ('lot', 3)])\n",
       "----------------------------------------------------------------------------------------------------\n",
       "intermediate_word = h*t\n",
       "all_combo_dict[intermediate_word] = ['hot']\n",
-      "-> (word = hot) in (visited = {'hit', 'hot', 'lot', 'dot'})\n",
+      "-> (word = hot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
       "----------------------------------------------------------------------------------------------------\n",
       "intermediate_word = ho*\n",
       "all_combo_dict[intermediate_word] = ['hot']\n",
-      "-> (word = hot) in (visited = {'hit', 'hot', 'lot', 'dot'})\n",
+      "-> (word = hot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
       "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
       "init: queue = deque([('dot', 3), ('lot', 3)])\n",
       "current_word = dot, level = 3\n",
       "----------------------------------------------------------------------------------------------------\n",
       "intermediate_word = *ot\n",
       "all_combo_dict[intermediate_word] = ['hot', 'dot', 'lot']\n",
-      "-> (word = hot) in (visited = {'hit', 'hot', 'lot', 'dot'})\n",
-      "-> (word = dot) in (visited = {'hit', 'hot', 'lot', 'dot'})\n",
-      "-> (word = lot) in (visited = {'hit', 'hot', 'lot', 'dot'})\n",
+      "-> (word = hot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
+      "-> (word = dot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
+      "-> (word = lot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
       "----------------------------------------------------------------------------------------------------\n",
       "intermediate_word = d*t\n",
       "all_combo_dict[intermediate_word] = ['dot']\n",
-      "-> (word = dot) in (visited = {'hit', 'hot', 'lot', 'dot'})\n",
+      "-> (word = dot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
       "----------------------------------------------------------------------------------------------------\n",
       "intermediate_word = do*\n",
       "all_combo_dict[intermediate_word] = ['dot', 'dog']\n",
-      "-> (word = dot) in (visited = {'hit', 'hot', 'lot', 'dot'})\n",
-      "-> (word = dog) not in (visited = {'hit', 'hot', 'lot', 'dot'})\n",
-      "init: visited = {'hit', 'hot', 'lot', 'dot'}\n",
-      "end:  visited = {'dot', 'hit', 'lot', 'hot', 'dog'}\n",
+      "-> (word = dot) in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
+      "-> (word = dog) not in (visited = {'dot', 'hot', 'hit', 'lot'})\n",
+      "init: visited = {'dot', 'hot', 'hit', 'lot'}\n",
+      "end:  visited = {'dog', 'hot', 'hit', 'dot', 'lot'}\n",
       "end:  queue = deque([('lot', 3), ('dog', 4)])\n",
       "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
       "init: queue = deque([('lot', 3), ('dog', 4)])\n",
@@ -137,20 +141,20 @@
       "----------------------------------------------------------------------------------------------------\n",
       "intermediate_word = *ot\n",
       "all_combo_dict[intermediate_word] = ['hot', 'dot', 'lot']\n",
-      "-> (word = hot) in (visited = {'dot', 'hit', 'lot', 'hot', 'dog'})\n",
-      "-> (word = dot) in (visited = {'dot', 'hit', 'lot', 'hot', 'dog'})\n",
-      "-> (word = lot) in (visited = {'dot', 'hit', 'lot', 'hot', 'dog'})\n",
+      "-> (word = hot) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot'})\n",
+      "-> (word = dot) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot'})\n",
+      "-> (word = lot) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot'})\n",
       "----------------------------------------------------------------------------------------------------\n",
       "intermediate_word = l*t\n",
       "all_combo_dict[intermediate_word] = ['lot']\n",
-      "-> (word = lot) in (visited = {'dot', 'hit', 'lot', 'hot', 'dog'})\n",
+      "-> (word = lot) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot'})\n",
       "----------------------------------------------------------------------------------------------------\n",
       "intermediate_word = lo*\n",
       "all_combo_dict[intermediate_word] = ['lot', 'log']\n",
-      "-> (word = lot) in (visited = {'dot', 'hit', 'lot', 'hot', 'dog'})\n",
-      "-> (word = log) not in (visited = {'dot', 'hit', 'lot', 'hot', 'dog'})\n",
-      "init: visited = {'dot', 'hit', 'lot', 'hot', 'dog'}\n",
-      "end:  visited = {'dot', 'hit', 'lot', 'hot', 'dog', 'log'}\n",
+      "-> (word = lot) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot'})\n",
+      "-> (word = log) not in (visited = {'dog', 'hot', 'hit', 'dot', 'lot'})\n",
+      "init: visited = {'dog', 'hot', 'hit', 'dot', 'lot'}\n",
+      "end:  visited = {'dog', 'hot', 'hit', 'dot', 'lot', 'log'}\n",
       "end:  queue = deque([('dog', 4), ('log', 4)])\n",
       "________________________________________________________________________________________________________________________________________________________________________________________________________\n",
       "init: queue = deque([('dog', 4), ('log', 4)])\n",
@@ -158,8 +162,8 @@
       "----------------------------------------------------------------------------------------------------\n",
       "intermediate_word = *og\n",
       "all_combo_dict[intermediate_word] = ['dog', 'log', 'cog']\n",
-      "-> (word = dog) in (visited = {'dot', 'hit', 'lot', 'hot', 'dog', 'log'})\n",
-      "-> (word = log) in (visited = {'dot', 'hit', 'lot', 'hot', 'dog', 'log'})\n",
+      "-> (word = dog) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot', 'log'})\n",
+      "-> (word = log) in (visited = {'dog', 'hot', 'hit', 'dot', 'lot', 'log'})\n",
       "(word = cog) == (endWord = cog)\n",
       "level = 5\n"
      ]
