--- a/46. Permutations.ipynb
+++ b/46. Permutations.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +55,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = []\n",
+      "i = 0, num = 1\n",
+      "(i = 0) not in (visited = set())\n",
+      "visited = {0}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [1]\n",
+      "i = 0, num = 1\n",
+      "i = 1, num = 2\n",
+      "(i = 1) not in (visited = {0})\n",
+      "visited = {0, 1}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [1, 2]\n",
+      "i = 0, num = 1\n",
+      "i = 1, num = 2\n",
+      "i = 2, num = 3\n",
+      "(i = 2) not in (visited = {0, 1})\n",
+      "visited = {0, 1, 2}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [1, 2, 3]\n",
+      "-> res = [[1, 2, 3]]\n",
+      "dfs -> i = 2, num = 3, subset = [1, 2]\n",
+      "visited = {0, 1}\n",
+      "dfs -> i = 1, num = 2, subset = [1]\n",
+      "visited = {0}\n",
+      "i = 2, num = 3\n",
+      "(i = 2) not in (visited = {0})\n",
+      "visited = {0, 2}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [1, 3]\n",
+      "i = 0, num = 1\n",
+      "i = 1, num = 2\n",
+      "(i = 1) not in (visited = {0, 2})\n",
+      "visited = {0, 1, 2}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [1, 3, 2]\n",
+      "-> res = [[1, 2, 3], [1, 3, 2]]\n",
+      "dfs -> i = 1, num = 2, subset = [1, 3]\n",
+      "visited = {0, 2}\n",
+      "i = 2, num = 3\n",
+      "dfs -> i = 2, num = 3, subset = [1]\n",
+      "visited = {0}\n",
+      "dfs -> i = 0, num = 1, subset = []\n",
+      "visited = set()\n",
+      "i = 1, num = 2\n",
+      "(i = 1) not in (visited = set())\n",
+      "visited = {1}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [2]\n",
+      "i = 0, num = 1\n",
+      "(i = 0) not in (visited = {1})\n",
+      "visited = {0, 1}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [2, 1]\n",
+      "i = 0, num = 1\n",
+      "i = 1, num = 2\n",
+      "i = 2, num = 3\n",
+      "(i = 2) not in (visited = {0, 1})\n",
+      "visited = {0, 1, 2}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [2, 1, 3]\n",
+      "-> res = [[1, 2, 3], [1, 3, 2], [2, 1, 3]]\n",
+      "dfs -> i = 2, num = 3, subset = [2, 1]\n",
+      "visited = {0, 1}\n",
+      "dfs -> i = 0, num = 1, subset = [2]\n",
+      "visited = {1}\n",
+      "i = 1, num = 2\n",
+      "i = 2, num = 3\n",
+      "(i = 2) not in (visited = {1})\n",
+      "visited = {1, 2}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [2, 3]\n",
+      "i = 0, num = 1\n",
+      "(i = 0) not in (visited = {1, 2})\n",
+      "visited = {0, 1, 2}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [2, 3, 1]\n",
+      "-> res = [[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1]]\n",
+      "dfs -> i = 0, num = 1, subset = [2, 3]\n",
+      "visited = {1, 2}\n",
+      "i = 1, num = 2\n",
+      "i = 2, num = 3\n",
+      "dfs -> i = 2, num = 3, subset = [2]\n",
+      "visited = {1}\n",
+      "dfs -> i = 1, num = 2, subset = []\n",
+      "visited = set()\n",
+      "i = 2, num = 3\n",
+      "(i = 2) not in (visited = set())\n",
+      "visited = {2}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [3]\n",
+      "i = 0, num = 1\n",
+      "(i = 0) not in (visited = {2})\n",
+      "visited = {0, 2}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [3, 1]\n",
+      "i = 0, num = 1\n",
+      "i = 1, num = 2\n",
+      "(i = 1) not in (visited = {0, 2})\n",
+      "visited = {0, 2, 1}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [3, 1, 2]\n",
+      "-> res = [[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1], [3, 1, 2]]\n",
+      "dfs -> i = 1, num = 2, subset = [3, 1]\n",
+      "visited = {0, 2}\n",
+      "i = 2, num = 3\n",
+      "dfs -> i = 0, num = 1, subset = [3]\n",
+      "visited = {2}\n",
+      "i = 1, num = 2\n",
+      "(i = 1) not in (visited = {2})\n",
+      "visited = {2, 1}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [3, 2]\n",
+      "i = 0, num = 1\n",
+      "(i = 0) not in (visited = {2, 1})\n",
+      "visited = {0, 2, 1}\n",
+      "------------------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "subset = [3, 2, 1]\n",
+      "-> res = [[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1], [3, 1, 2], [3, 2, 1]]\n",
+      "dfs -> i = 0, num = 1, subset = [3, 2]\n",
+      "visited = {2, 1}\n",
+      "i = 1, num = 2\n",
+      "i = 2, num = 3\n",
+      "dfs -> i = 1, num = 2, subset = [3]\n",
+      "visited = {2}\n",
+      "i = 2, num = 3\n",
+      "dfs -> i = 2, num = 3, subset = []\n",
+      "visited = set()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1], [3, 1, 2], [3, 2, 1]]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nums = [1,2,3]\n",
     "# [[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,1,2],[3,2,1]]\n",
