--- a/139. Word Break.ipynb
+++ b/139. Word Break.ipynb
@@ -21,14 +21,17 @@
     "    def dfs(self, current, memory):\n",
     "        print(\"-\" * 150)\n",
     "\n",
+    "        # 如果當前字符串為空，表示已經成功拆分\n",
     "        if (current == \"\"):\n",
     "            print(f'True -> (current == \"\")')\n",
     "            return True\n",
     "        \n",
+    "        # 如果當前字符串已經被記憶，直接返回記憶中的結果\n",
     "        if (current in memory):\n",
     "            print(f\"{memory[current]} -> ((current = {current}) in (memory = {memory}))\")\n",
     "            return memory[current]\n",
     "        \n",
+    "        # 嘗試使用字典中的單詞進行拆分\n",
     "        for word in self.wordDict:\n",
     "            print(f\"word = {word}, current = {current}\")\n",
     "            if current.startswith(word):\n",
@@ -36,13 +39,13 @@
     "                new_current = current[len(word):]\n",
     "                print(f\"new_current = {new_current}\")\n",
     "\n",
+    "                # 遞歸呼叫，檢查剩餘的部分是否能夠被成功拆分\n",
     "                if self.dfs(current = new_current, memory = memory):\n",
     "                    memory[current] = True\n",
     "                    print(f\"True -> memory = {memory}\")\n",
     "                    return True\n",
-    "            \n",
-    "            # print(\"_\" * 150)\n",
     "        \n",
+    "        # 若無法成功拆分，將結果記錄為False\n",
     "        memory[current] = False\n",
     "        print(f\"False -> memory = {memory}\")\n",
     "        print(\"_\" * 150)\n",
