--- a/242. Valid Anagram.ipynb
+++ b/242. Valid Anagram.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 242. Valid Anagram"
+    "## 242. Valid Anagram\n",
+    "判斷兩個字符串 s 和 t 是否互為字母異位詞"
    ]
   },
   {
@@ -32,6 +33,42 @@
     "                return False\n",
     "        \n",
     "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isAnagram(self, s: str, t: str) -> bool:\n",
+    "        # 如果兩個字符串的長度不相等，則它們不可能是字母異位詞\n",
+    "        if len(s) != len(t):\n",
+    "            return False      \n",
+    "        \n",
+    "        # 用於儲字每個字符的出現次數\n",
+    "        hashtable = {}\n",
+    "\n",
+    "        # 遍歷字符串 s，統計每個字符的出現次數\n",
+    "        for char in s:\n",
+    "            # 如果字典中已有此字符，則其計數增加1；否則，初始化為1\n",
+    "            hashtable[char] = hashtable.get(char, 0) + 1\n",
+    "        \n",
+    "        # 遍歷字符串 t，減少字典中相應字符的計數\n",
+    "        for char in t:\n",
+    "            # 如果字符在字典中存在，則減1\n",
+    "            if char in hashtable:\n",
+    "                hashtable[char] -= 1\n",
+    "                # 如果某字符的計數減至0，則從字典中移除該字符\n",
+    "                if hashtable[char] == 0:\n",
+    "                    hashtable.pop(char)\n",
+    "            else:\n",
+    "                # 如果字符不在字典中，則直接返回 False，因為這表示 t 有 s 中沒有的字符\n",
+    "                return False\n",
+    "        \n",
+    "        # 如果字典最後為空，則 s 和 t 互為字母異位詞\n",
+    "        return True\n"
    ]
   },
   {
