--- a/242. Valid Anagram.ipynb
+++ b/242. Valid Anagram.ipynb
@@ -36,8 +36,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: O(n + m)**  \n",
+    "**空間複雜度: O(1)**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +80,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**時間複雜度: O(n)**  \n",
+    "**空間複雜度: O(1)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -79,7 +95,7 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
      "execution_count": 3,
@@ -89,7 +105,7 @@
    ],
    "source": [
     "s = \"anagram\"; t = \"nagaram\"\n",
-    "s = \"rat\"; t = \"car\"\n",
+    "# s = \"rat\"; t = \"car\"\n",
     "Solution().isAnagram(s, t)"
    ]
   }
