--- a/242. Valid Anagram.ipynb
+++ b/242. Valid Anagram.ipynb
@@ -17,18 +17,18 @@
     "class Solution:\n",
     "    def isAnagram(self, s: str, t: str) -> bool:\n",
     "        # 創建一個哈希表來存儲字母和其對應的數量\n",
-    "        hashtable = {}\n",
+    "        hash_table = {}\n",
     "        \n",
     "        # 遍歷第一個字串 s，更新哈希表中的計數\n",
     "        for char in s:\n",
-    "            hashtable[char] = hashtable.get(char, 0) + 1\n",
+    "            hash_table[char] = hash_table.get(char, 0) + 1\n",
     "        \n",
     "        # 遍歷第二個字串 t，將已經計數的字母數量減去1\n",
     "        for char in t:\n",
-    "            hashtable[char] = hashtable.get(char, 0) - 1\n",
+    "            hash_table[char] = hash_table.get(char, 0) - 1\n",
     "        \n",
     "        # 檢查哈希表中所有的值；如果所有值為0，則返回 True，否則返回 False\n",
-    "        for value in hashtable.values():\n",
+    "        for value in hash_table.values():\n",
     "            if value != 0:\n",
     "                return False\n",
     "        \n",
@@ -56,21 +56,21 @@
     "            return False      \n",
     "        \n",
     "        # 用於儲字每個字符的出現次數\n",
-    "        hashtable = {}\n",
+    "        hash_table = {}\n",
     "\n",
     "        # 遍歷字符串 s，統計每個字符的出現次數\n",
     "        for char in s:\n",
     "            # 如果字典中已有此字符，則其計數增加1；否則，初始化為1\n",
-    "            hashtable[char] = hashtable.get(char, 0) + 1\n",
+    "            hash_table[char] = hash_table.get(char, 0) + 1\n",
     "        \n",
     "        # 遍歷字符串 t，減少字典中相應字符的計數\n",
     "        for char in t:\n",
     "            # 如果字符在字典中存在，則減1\n",
-    "            if char in hashtable:\n",
-    "                hashtable[char] -= 1\n",
+    "            if char in hash_table:\n",
+    "                hash_table[char] -= 1\n",
     "                # 如果某字符的計數減至0，則從字典中移除該字符\n",
-    "                if hashtable[char] == 0:\n",
-    "                    hashtable.pop(char)\n",
+    "                if hash_table[char] == 0:\n",
+    "                    hash_table.pop(char)\n",
     "            else:\n",
     "                # 如果字符不在字典中，則直接返回 False，因為這表示 t 有 s 中沒有的字符\n",
     "                return False\n",
