--- a/424. Longest Repeating Character Replacement.ipynb
+++ b/424. Longest Repeating Character Replacement.ipynb
@@ -17,26 +17,40 @@
     "    def characterReplacement(self, s: str, k: int) -> int:\n",
     "        print(f\"s = {s}, k = {k}\")\n",
     "        left = 0\n",
-    "        right = 0\n",
-    "        dict_table = {}\n",
-    "        res = 0\n",
-    "        while right < len(s):\n",
-    "            print(f\"{'-'*30}\\noriginal: right = {right}, left = {left}\")\n",
-    "            dict_table[s[right]] = dict_table.get(s[right], 0) + 1\n",
-    "            while (right - left + 1) - max(dict_table.values()) > k:\n",
-    "                # 該區間的元素數量，扣除掉最多數量的類別後，剩餘的元素數量需要小於k。(這樣才能取代，使該區間內的元素皆相同)\n",
-    "                # 如果大於k，left就加1\n",
-    "                print(f\"(({(right - left + 1)} - {max(dict_table.values())}) = {(right - left + 1) - max(dict_table.values())}) > (k = {k})\")\n",
-    "                dict_table[s[left]] -= 1\n",
-    "                left += 1\n",
-    "                print(f\"update: right = {right}, left = {left}\")\n",
+    "        result = 0\n",
+    "        hash_table = {}\n",
+    "        for right in range(len(s)):\n",
+    "            hash_table[s[right]] = hash_table.get(s[right], 0) + 1\n",
+    "            print(f\"{'-'*100}\\ninit:   {left = }, {right = }\")\n",
+    "            print(f\"s = {'*' * left}{s[left:right+1]}{'*' * (len(s) - right - 1)}\")\n",
+    "            print(f\"add - {s[right] = }, {hash_table = }\")\n",
+    "\n",
     "            \n",
-    "            print(f\"(({(right - left + 1)} - {max(dict_table.values())}) = {(right - left + 1) - max(dict_table.values())}) <= (k = {k})\")\n",
     "            \n",
-    "            res = max(res, (right - left + 1))\n",
-    "            right += 1\n",
-    "            print(f\"res = {res}\")\n",
-    "        return res"
+    "            window_size = right - left + 1 # 該窗口大小\n",
+    "            max_count = max(hash_table.values()) # 窗口最多類別數量\n",
+    "\n",
+    "            # 窗口的元素數量 - 窗口最多類別數量 = 需取代數。 (需取代數 <= 可取代數) 才是有效區間\n",
+    "            if (window_size - max_count) <= k:\n",
+    "                print(f\"((窗口的元素數量({window_size}) - 窗口最多類別數量({max_count})) = 需取代數({window_size - max_count})) <= 可取代數({k})\")\n",
+    "                result = window_size\n",
+    "                print(f\"{result = }\")\n",
+    "            \n",
+    "            # 維持同樣窗口大小，向右滑動窗口，查看該窗口大小在後續字串中是否有效\n",
+    "            else:\n",
+    "                print(f\"((窗口的元素數量({window_size}) - 窗口最多類別數量({max_count})) = 需取代數({window_size - max_count})) > 可取代數({k})\")\n",
+    "                \n",
+    "                hash_table[s[left]] -= 1 # 刪除hash_table中儲存的左指針對應的字符資訊\n",
+    "\n",
+    "                # 清除記憶體\n",
+    "                if hash_table[s[left]] == 0:\n",
+    "                    hash_table.pop(s[left])\n",
+    "                print(f\"del - {s[left] = }, {hash_table = }\")\n",
+    "                \n",
+    "                left += 1 # 左指針加1，才能在下個迴圈的right加1時維持窗口大小\n",
+    "                print(f\"update: {left = }, {right = }\")          \n",
+    "\n",
+    "        return result"
    ]
   },
   {
@@ -48,43 +62,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "s = AABABBA, k = 1\n",
-      "------------------------------\n",
-      "original: right = 0, left = 0\n",
-      "((1 - 1) = 0) <= (k = 1)\n",
-      "res = 1\n",
-      "------------------------------\n",
-      "original: right = 1, left = 0\n",
-      "((2 - 2) = 0) <= (k = 1)\n",
-      "res = 2\n",
-      "------------------------------\n",
-      "original: right = 2, left = 0\n",
-      "((3 - 2) = 1) <= (k = 1)\n",
-      "res = 3\n",
-      "------------------------------\n",
-      "original: right = 3, left = 0\n",
-      "((4 - 3) = 1) <= (k = 1)\n",
-      "res = 4\n",
-      "------------------------------\n",
-      "original: right = 4, left = 0\n",
-      "((5 - 3) = 2) > (k = 1)\n",
-      "update: right = 4, left = 1\n",
-      "((4 - 2) = 2) > (k = 1)\n",
-      "update: right = 4, left = 2\n",
-      "((3 - 2) = 1) <= (k = 1)\n",
-      "res = 4\n",
-      "------------------------------\n",
-      "original: right = 5, left = 2\n",
-      "((4 - 3) = 1) <= (k = 1)\n",
-      "res = 4\n",
-      "------------------------------\n",
-      "original: right = 6, left = 2\n",
-      "((5 - 3) = 2) > (k = 1)\n",
-      "update: right = 6, left = 3\n",
-      "((4 - 2) = 2) > (k = 1)\n",
-      "update: right = 6, left = 4\n",
-      "((3 - 2) = 1) <= (k = 1)\n",
-      "res = 4\n"
+      "s = AABCBBA, k = 1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "init:   left = 0, right = 0\n",
+      "s = A******\n",
+      "add - s[right] = 'A', hash_table = {'A': 1}\n",
+      "((窗口的元素數量(1) - 窗口最多類別數量(1)) = 需取代數(0)) <= 可取代數(1)\n",
+      "result = 1\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "init:   left = 0, right = 1\n",
+      "s = AA*****\n",
+      "add - s[right] = 'A', hash_table = {'A': 2}\n",
+      "((窗口的元素數量(2) - 窗口最多類別數量(2)) = 需取代數(0)) <= 可取代數(1)\n",
+      "result = 2\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "init:   left = 0, right = 2\n",
+      "s = AAB****\n",
+      "add - s[right] = 'B', hash_table = {'A': 2, 'B': 1}\n",
+      "((窗口的元素數量(3) - 窗口最多類別數量(2)) = 需取代數(1)) <= 可取代數(1)\n",
+      "result = 3\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "init:   left = 0, right = 3\n",
+      "s = AABC***\n",
+      "add - s[right] = 'C', hash_table = {'A': 2, 'B': 1, 'C': 1}\n",
+      "((窗口的元素數量(4) - 窗口最多類別數量(2)) = 需取代數(2)) > 可取代數(1)\n",
+      "del - s[left] = 'A', hash_table = {'A': 1, 'B': 1, 'C': 1}\n",
+      "update: left = 1, right = 3\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "init:   left = 1, right = 4\n",
+      "s = *ABCB**\n",
+      "add - s[right] = 'B', hash_table = {'A': 1, 'B': 2, 'C': 1}\n",
+      "((窗口的元素數量(4) - 窗口最多類別數量(2)) = 需取代數(2)) > 可取代數(1)\n",
+      "del - s[left] = 'A', hash_table = {'B': 2, 'C': 1}\n",
+      "update: left = 2, right = 4\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "init:   left = 2, right = 5\n",
+      "s = **BCBB*\n",
+      "add - s[right] = 'B', hash_table = {'B': 3, 'C': 1}\n",
+      "((窗口的元素數量(4) - 窗口最多類別數量(3)) = 需取代數(1)) <= 可取代數(1)\n",
+      "result = 4\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "init:   left = 2, right = 6\n",
+      "s = **BCBBA\n",
+      "add - s[right] = 'A', hash_table = {'B': 3, 'C': 1, 'A': 1}\n",
+      "((窗口的元素數量(5) - 窗口最多類別數量(3)) = 需取代數(2)) > 可取代數(1)\n",
+      "del - s[left] = 'B', hash_table = {'B': 2, 'C': 1, 'A': 1}\n",
+      "update: left = 3, right = 6\n"
      ]
     },
     {
@@ -99,7 +122,7 @@
     }
    ],
    "source": [
-    "s = \"AABABBA\"\n",
+    "s = \"AABCBBA\"\n",
     "k = 1\n",
     "Solution().characterReplacement(s, k)"
    ]
@@ -121,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
