--- a/424. Longest Repeating Character Replacement.ipynb
+++ b/424. Longest Repeating Character Replacement.ipynb
@@ -24,11 +24,11 @@
     "class Solution:\n",
     "    def characterReplacement(self, s: str, k: int) -> int:\n",
     "        print(f\"s = {s}, k = {k}\")\n",
-    "        left = 0\n",
-    "        result = 0\n",
-    "        hash_table = {}\n",
+    "        left = 0 # 滑動窗口左邊界\n",
+    "        result = 0 # 紀錄最長的有效字串長度\n",
+    "        hash_table = {} # 用於記錄窗口中每個字符的出現次數\n",
     "        for right in range(len(s)):\n",
-    "            hash_table[s[right]] = hash_table.get(s[right], 0) + 1\n",
+    "            hash_table[s[right]] = hash_table.get(s[right], 0) + 1 # 增加當前字符的計數\n",
     "            print(f\"{'-'*100}\\ninit:   {left = }, {right = }\")\n",
     "            print(f\"s = {'*' * left}{s[left:right+1]}{'*' * (len(s) - right - 1)}\")\n",
     "            print(f\"add - {s[right] = }, {hash_table = }\")            \n",
